--- a/about.html
+++ b/about.html
@@ -2,14 +2,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us | My Cool Website</title>
+    <title>yokese</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous" />
     <link rel="stylesheet" href="custom.css" />
   </head>
   <body>
     <div class="my-bg-photo bg-secondary text-white py-5 text-center shadow">
-      <h1 class="display-4">My Cool Website</h1>
-      <p class="lead mb-0">A super interesting place on the web.</p>
+      <h1 class="display-4">heh</h1>
+      <p class="lead mb-0">hee hee</p>
     </div>
 
     <div class="container my-custom-container pt-3">
@@ -77,7 +77,7 @@
     </div>
 
     <footer class="border-top mt-5 py-4 text-center text-muted small">
-      <p>&copy; 2020 My Site</p>
+      <p>&copy; 2021 owo</p>
     </footer>
 
     <!-- JavaScript and dependencies -->
