--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Cool Website</title>
+    <title>Paginita con fotos de gatos xd</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous" />
     <link rel="stylesheet" href="custom.css" />
   </head>
   <body>
     <div class="my-bg-photo bg-secondary text-white py-5 text-center shadow">
-      <h1 class="display-4">My Cool Website</h1>
-      <p class="lead mb-0">A super interesting place on the web.</p>
+      <h1 class="display-4">Jeje</h1>
+      <p class="lead mb-0">No se que poner aca :p.</p>
     </div>
 
     <div class="container my-custom-container pt-3">
@@ -29,7 +29,7 @@
 
       <div class="row">
         <div class="col-md-7">
-          <h1>Hey, welcome!</h1>
+          <h1>Hola buenas tardes</h1>
           <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ratione inventore, quae modi voluptatem odit labore molestias cupiditate voluptas velit recusandae nisi neque, odio ullam ea libero quo sed praesentium.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolorum autem fuga temporibus architecto, numquam repellendus commodi minus excepturi. Voluptatum minima impedit inventore. Ipsum, voluptatem veritatis! Odio quod quaerat atque.</p>
           <a href="about.html" class="btn btn-primary btn-lg">Read Our Story</a>
@@ -41,7 +41,7 @@
     </div>
 
     <footer class="border-top mt-5 py-4 text-center text-muted small">
-      <p>&copy; 2020 My Site</p>
+      <p>&copy; 2021 copirait gatos</p>
     </footer>
 
     <!-- JavaScript and dependencies -->
