--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h1>Hola buenas tardes</h1>
           <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ratione inventore, quae modi voluptatem odit labore molestias cupiditate voluptas velit recusandae nisi neque, odio ullam ea libero quo sed praesentium.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolorum autem fuga temporibus architecto, numquam repellendus commodi minus excepturi. Voluptatum minima impedit inventore. Ipsum, voluptatem veritatis! Odio quod quaerat atque.</p>
-          <a href="about.html" class="btn btn-primary btn-lg">Read Our Story</a>
+          <a href="about.html" class="btn btn-primary btn-lg">c:</a>
         </div>
         <div class="col-md-5 text-center pt-5">
           <img src="images/cat.svg" class="my-drawing img-fluid" alt="A drawing of a cat." />
